--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <header class="header">
         <div class="header__left-block">
             <div class="header__logo">
-                <img src="icons/logo.svg" alt="Логотип">
+                <img src="icons/logo.svg" alt="Logo">
             </div>
             <nav class="header__links">
-                <a href="#" class="header__link">Доставка питания</a>
-                <a href="#" class="header__link">Второй пункт</a>
+                <a href="#" class="header__link">Food Delivery</a>
+                <a href="#" class="header__link">Second Item</a>
             </nav>
         </div>
         <div class="header__right-block">
-            <button data-modal class="btn btn_white">Связаться с нами</button>
+            <button data-modal class="btn btn_white">Contact Us</button>
         </div>
     </header>
     <div class="sidepanel">
-        <div class="sidepanel__text"><span>Социальные сети</span></div>
+        <div class="sidepanel__text"><span>Social Networks</span></div>
         <div class="sidepanel__divider"></div>
         <a href="#" class="sidepanel__icon">
             <img src="icons/instagram.svg" alt="instagram">
@@ -39,38 +39,38 @@
                 <div class="tabcontent">
                     <img src="img/tabs/vegy.jpg" alt="vegy">
                     <div class="tabcontent__descr">
-                        Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Для людей, которые интересуются спортом; активных и здоровых. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!
+                        "Fitness" menu - a new approach to cooking: more fresh vegetables and fruits. For people who are interested in sports; active and healthy. This is a completely new product with an optimal price and high quality!
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/elite.jpg" alt="elite">
                     <div class="tabcontent__descr">
-                        Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!                                     
+                        "Premium" menu - we use not only beautiful packaging design but also high-quality dish execution. Red fish, seafood, fruits - restaurant menu without going to the restaurant!
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/post.jpg" alt="post">
                     <div class="tabcontent__descr">
-                        Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!                                     
+                        Our special "Lenten menu" - a careful selection of ingredients: complete absence of animal products. Complete harmony with yourself and nature in every element! Everything will be Om!
                     </div>
                 </div>
                 <div class="tabcontent">
                     <img src="img/tabs/vegy.jpg" alt="vegy">
                     <div class="tabcontent__descr">
-                        Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
+                        "Balanced" menu - it matches your diet to all scientific recommendations. We carefully calculate your need for proteins/fats/carbs and create the best dishes for you.
                     </div>
                 </div>
                 <div class="tabheader">
-                    <h3>Выберите стиль питания</h3>
+                    <h3>Choose your diet style</h3>
                     <div class="tabheader__items">
-                        <div class="tabheader__item tabheader__item_active">Фитнес</div>
-                        <div class="tabheader__item">Премиум</div>
-                        <div class="tabheader__item">Постное</div>
-                        <div class="tabheader__item">Сбалансированное</div>
+                        <div class="tabheader__item tabheader__item_active">Fitness</div>
+                        <div class="tabheader__item">Premium</div>
+                        <div class="tabheader__item">Lenten</div>
+                        <div class="tabheader__item">Balanced</div>
                     </div>
                 </div>
             </div>
-            <div class="preview__life">Живи полной жизнью!</div>
+            <div class="preview__life">Live life to the fullest!</div>
         </div>
     </div>
 
@@ -80,24 +80,24 @@
         <div class="bgc_y"></div>
         <div class="container">
             <div class="offer__text">
-                <h2 class="title">Что мы можем вам предложить?</h2>
+                <h2 class="title">What can we offer you?</h2>
                 <div class="offer__descr">
-                    Наша основная идея - это правильное питание. Оно может быть простым и вкусным. Мы не просто доставка, мы сервис! Мы взяли на себя все расчеты БЖУ, калорийности, объемов порций и прочие важные, но скучные аспекты. Вам остается только полезная, сытная и правильная еда, которую мы привозим прямо под дверь.
+                    Our main idea is proper nutrition. It can be simple and delicious. We are not just a delivery service, we are a service! We have taken care of all the calculations of proteins/fats/carbs, calories, portion sizes, and other important but boring aspects. You are left with only healthy, satisfying, and proper food that we deliver right to your door.
                 </div>
             </div>
             <div class="offer__action">
-                <button data-modal class="btn btn_dark">Связаться с нами</button>
+                <button data-modal class="btn btn_dark">Contact Us</button>
             </div>
         </div>
         <div class="container">
             <div class="offer__advantages">
-                <h2>Быстро и полезно</h2>
+                <h2>Fast and Healthy</h2>
                 <div class="offer__advantages-text">
-                    Готовка дома занимает много сил, времени и нервов. Мы привозим еду сразу на целый день, и ты можешь действовать так, как тебе удобно, не подстраиваясь ни под кого и будучи уверенным в качестве продукта!
+                    Cooking at home takes a lot of effort, time, and nerves. We deliver food for the whole day, and you can act as you like, not adjusting to anyone and being confident in the quality of the product!
                 </div>
-                <h2>Правильный рацион</h2>
+                <h2>Proper Diet</h2>
                 <div class="offer__advantages-text">
-                    Мы разработали специальное меню, где учтены все нюансы правильного питания, от баланса БЖУ до их приготовления и дробления рациона.
+                    We have developed a special menu that takes into account all the nuances of proper nutrition, from the balance of proteins/fats/carbs to their preparation and meal splitting.
                 </div>
             </div>
             <div class="offer__slider">
@@ -136,44 +136,44 @@
 
     <div class="calculating">
         <div class="container">
-            <h2 class="title">Рассчитаем вашу потребность в калориях?
+            <h2 class="title">Shall we calculate your calorie needs?
             </h2>
             <div class="calculating__field">
                 <div class="calculating__subtitle">
-                    Ваш пол
+                    Your gender
                 </div>
                 <div class="calculating__choose" id="gender">
-                    <div id='female' class="calculating__choose-item calculating__choose-item_active">Женщина</div>
-                    <div id='male' class="calculating__choose-item">Мужчина</div>
+                    <div id='female' class="calculating__choose-item calculating__choose-item_active">Female</div>
+                    <div id='male' class="calculating__choose-item">Male</div>
                 </div>
 
                 <div class="calculating__subtitle">
-                    Ваша конституция
+                    Your constitution
                 </div>
                 <div class="calculating__choose calculating__choose_medium">
-                    <input type="text" id="height" placeholder="Введите рост" class="calculating__choose-item">
-                    <input type="text" id="weight" placeholder="Введите вес"  class="calculating__choose-item">
-                    <input type="text" id="age" placeholder="Введите возраст" class="calculating__choose-item">
+                    <input type="text" id="height" placeholder="Enter height" class="calculating__choose-item">
+                    <input type="text" id="weight" placeholder="Enter weight"  class="calculating__choose-item">
+                    <input type="text" id="age" placeholder="Enter age" class="calculating__choose-item">
                 </div>
 
                 <div class="calculating__subtitle">
-                    Выберите вашу физическая активность
+                    Choose your physical activity
                 </div>
                 <div class="calculating__choose calculating__choose_big">
-                    <div data-ratio='1.2' id="low" class="calculating__choose-item">Низкая активность </div>
-                    <div data-ratio='1.375' id="small"  class="calculating__choose-item calculating__choose-item_active">Невысокая активность</div>
-                    <div data-ratio='1.55' id="medium" class="calculating__choose-item">Умеренная активность</div>
-                    <div data-ratio='1.725' id="high" class="calculating__choose-item">Высокая активность</div>
+                    <div data-ratio='1.2' id="low" class="calculating__choose-item">Low activity</div>
+                    <div data-ratio='1.375' id="small"  class="calculating__choose-item calculating__choose-item_active">Low activity</div>
+                    <div data-ratio='1.55' id="medium" class="calculating__choose-item">Moderate activity</div>
+                    <div data-ratio='1.725' id="high" class="calculating__choose-item">High activity</div>
                 </div>
 
                 <div class="calculating__divider"></div>
 
                 <div class="calculating__total">
                     <div class="calculating__subtitle">
-                        Ваша суточная норма калорий:
+                        Your daily calorie intake:
                     </div>
                     <div class="calculating__result">
-                        <span>2700</span> ккал
+                        <span>2700</span> kcal
                     </div>
                 </div>
             </div>
@@ -183,7 +183,7 @@
     <div class="divider"></div>
 
     <div class="menu">
-        <h2 class="title">Наше меню на день</h2>
+        <h2 class="title">Our menu for the day</h2>
 
         <div class="menu__field">
             <div class="container">
@@ -194,12 +194,12 @@
 
     <div class="order">
         <div class="container">
-            <div class="title">Заказывай пробный день прямо сейчас!</div>
+            <div class="title">Order a trial day right now!</div>
             <form action="#" class="order__form">
-                <input required placeholder="Ваше имя" name="name" type="text" class="order__input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="order__input">
+                <input required placeholder="Your name" name="name" type="text" class="order__input">
+                <input required placeholder="Your phone number" name="phone" type="phone" class="order__input">
                 <img src="icons/right.svg" alt="right">
-                <button class="btn btn_dark btn_min">Перезвонить мне</button>
+                <button class="btn btn_dark btn_min">Call me back</button>
             </form>
         </div>
     </div>
@@ -210,32 +210,32 @@
         <div class="bgc_y"></div>
         <div class="container">
             <div class="promotion__text">
-                <div class="title">Акция для новых клиентов!</div>
+                <div class="title">Promotion for new clients!</div>
                 <div class="promotion__descr">
-                    Мы ценим каждого клиента и предлагаем вам стать одним из них на очень выгодных условиях. 
-                    Каждому, кто закажет доставку питание на неделю, будет предоставлена скидка в размере <span>20%!</span>
+                    We value every client and offer you to become one of them on very favorable terms. 
+                    Everyone who orders food delivery for a week will receive a discount of <span>20%!</span>
                     <br><br>
-                    Акция закончится 20 мая в 00:00
+                    The promotion will end on May 20 at 00:00
                 </div>
             </div>
             <div class="promotion__timer">
-                <div class="title">Осталось до конца акции:</div>
+                <div class="title">Time left until the end of the promotion:</div>
                 <div class="timer">
                     <div class="timer__block">
                         <span id="days">12</span>
-                        дней
+                        days
                     </div>
                     <div class="timer__block">
                         <span id="hours">20</span>
-                        часов
+                        hours
                     </div>
                     <div class="timer__block">
                         <span id="minutes">56</span>
-                        минут
+                        minutes
                     </div>
                     <div class="timer__block">
                         <span id="seconds">20</span>
-                        секунд
+                        seconds
                     </div>
                 </div>
             </div>
@@ -245,7 +245,7 @@
     <footer class="footer">
         <div class="container">
             <div class="social">
-                <div class="subtitle">Мы в социальных сетях:</div>
+                <div class="subtitle">We are on social networks:</div>
                 <a href="#" class="link">instagram</a>
                 <a href="#" class="link">facebook</a>
             </div>
@@ -253,9 +253,9 @@
                 <img src="icons/veg.svg" alt="pepper">
             </div>
             <div class="call">
-                <div class="subtitle">Или позвоните нам</div>
-                <a href="#" class="link">+380678341034</a>
-                <a href="#" class="link">+380500941356</a>
+                <div class="subtitle">Or call us</div>
+                <a href="#" class="link">+380XXXXXXXXX</a>
+                <a href="#" class="link">+380XXXXXXXXX</a>
             </div>
         </div>
     </footer>
@@ -265,10 +265,10 @@
             <div class="modal__content">
                 <form action="#">
                     <div data-close class="modal__close">&times;</div>
-                    <div class="modal__title">Мы свяжемся с вами как можно быстрее!</div>
-                    <input required placeholder="Ваше имя" name="name" type="text" class="modal__input">
-                    <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal__input">
-                    <button class="btn btn_dark btn_min">Перезвонить мне</button>
+                    <div class="modal__title">We will contact you as soon as possible!</div>
+                    <input required placeholder="Your name" name="name" type="text" class="modal__input">
+                    <input required placeholder="Your phone number" name="phone" type="phone" class="modal__input">
+                    <button class="btn btn_dark btn_min">Call me back</button>
                 </form>
             </div>
         </div>
